--- a/templates/chatbotapp/index.html
+++ b/templates/chatbotapp/index.html
@@ -1,4 +1,4 @@
-{% extends "master-templates-bianco/base.html" %}
+{% extends "master-templates/base.html" %}
 {% load static %}
 
 {% block content %}
@@ -11,11 +11,11 @@
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="card card-bordered">
-                                        <img src="{% static 'images/card-home-chatbot-bianco.jpg' %}" class="card-img-top" title="Designed by Freepik">
+                                        <img src="{% static 'images/card-home-chatbot.jpg' %}" class="card-img-top" title="Designed by Freepik">
                                         <div class="card-inner">
-                                            <h5 class="card-title">Selamat Datang di Chatbot CMS Bianco Costel</h5>
-                                             <p class="card-text">Platform yang dirancang untuk membantu optimalisasi serta tata kelola data untuk bahan pengetahuan dan training AI dalam pemanfaatannya sebagai chatbot perhotelan di Bianco Costel.</p>
-                                            <a href="{{setup_link}}" class="btn btn-primary">Setup dan Konversi Data</a>
+                                            <h5 class="card-title">Welcome to the Chatbot CMS</h5>
+                                             <p class="card-text">A platform designed to support the optimization and management of data for knowledge building and AI training, specifically for its use as a hospitality chatbot.</p>
+                                            <a href="{{setup_link}}" class="btn btn-primary">Data Setup and Conversion</a>
                                         </div>
                                     </div>
                                 </div>
