--- a/templates/chatbotapp/modalcheckstatusapproval.html
+++ b/templates/chatbotapp/modalcheckstatusapproval.html
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div class="modal-footer bg-light">
-                <span class="sub-text">Bianco Costel Chatbot Management By Banda AI</span>
+                <span class="sub-text">Chatbot Management By Banda AI</span>
             </div>
         </div>
     </div>
