--- a/templates/chatbotapp/modalcheckstatusorgeneratetemplate.html
+++ b/templates/chatbotapp/modalcheckstatusorgeneratetemplate.html
@@ -4,7 +4,7 @@
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Bikin Template & Pantau Approval-nya</h5>
+                <h5 class="modal-title">Create Templates & Monitor Their Approval</h5>
                 <a href="#" id="modalgenerateormonitor" class="close" data-dismiss="modal" aria-label="Close">
                     <em class="icon ni ni-cross"></em>
                 </a>
@@ -17,8 +17,8 @@
                                 <img src="{% static 'images/card-temp-chatbot6.jpg' %}" class="card-img-top" title="Designed by Freepik">
                                 <div class="card-inner">
                                     <h5 class="card-title">Template Wizard</h5>
-                                    <p class="card-text">Susun template kamu dari awal sampai submit ke Meta, lengkap dengan langkah-langkah yang jelas dan gampang dipahami. Yuk, mulai sekarang!</p>
-                                    <a href="" data-dismiss="modal" class="btn btn-primary" data-toggle="modal" data-target="#modalLarge3">Bikin template disini</a>
+                                    <p class="card-text">Build your template from scratch all the way to submitting it to Meta, with clear and easy-to-follow steps. Let’s get started!</p>
+                                    <a href="" data-dismiss="modal" class="btn btn-primary" data-toggle="modal" data-target="#modalLarge3">Create your template here</a>
                                 </div>
                             </div>
                         </div>
@@ -26,9 +26,9 @@
                             <div class="card card-bordered">
                                 <img src="{% static 'images/card-temp-chatbot7.jpg' %}" class="card-img-top" title="Designed by Freepik">
                                 <div class="card-inner">
-                                    <h5 class="card-title">Pantau Status Approval</h5>
-                                    <p class="card-text">Template yang sudah kamu submit akan dicek oleh Meta—biasanya butuh waktu hingga 48 jam. Tenang, kamu bisa cek statusnya langsung dari sini.</p>
-                                    <a href="" data-dismiss="modal" class="btn btn-primary" data-toggle="modal" data-target="#modalLarge8">Pantau disini</a>
+                                    <h5 class="card-title">Track Approval Status</h5>
+                                    <p class="card-text">Once you submit your template, Meta will review it—this usually takes up to 48 hours. No worries, you can check the status right here.</p>
+                                    <a href="" data-dismiss="modal" class="btn btn-primary" data-toggle="modal" data-target="#modalLarge8">Track it here</a>
                                 </div>
                             </div>
                         </div>
@@ -36,7 +36,7 @@
                 </div>
             </div>
             <div class="modal-footer bg-light">
-                <span class="sub-text">Bianco Costel Chatbot Management By Banda AI</span>
+                <span class="sub-text">Chatbot Management By Banda AI</span>
             </div>
         </div>
     </div>
