--- a/templates/chatbotapp/modalgeneratetemplate.html
+++ b/templates/chatbotapp/modalgeneratetemplate.html
@@ -168,7 +168,7 @@
                                             <div class="nk-wizard-content">
                                                 <div id="text-inputs2" class="content-type-section">
                                                     <div style="padding-bottom: 15px;">
-                                                        <label>Berikut adalah <strong>Body Recap</strong> dari input yang anda berikan di langkah sebelumnya. Silahkan diperiksa kembali sebelum melakukan submit (proses tidak dapat diulang kembali setelahnya). Sebagai catatan, proses approval sendiri membutuhkan waktu <strong>up to 48 jam</strong> sejak submit dilakukan. Seluruh proses approval dilakukan oleh pihak <strong>Meta</strong>.<em class="icon ni ni-help" id="icon-container3"><span class="tooltips3">Chat template memerlukan persetujuan dari Meta untuk memastikan konten berkualitas, mencegah spam, dan mematuhi kebijakan WhatsApp Business, terutama saat mengirim pesan di luar sesi 24 jam. Meta Platforms, Inc. adalah perusahaan teknologi multinasional yang berfokus pada media sosial, kecerdasan buatan, dan pengembangan metaverse melalui platform seperti Facebook, Instagram, WhatsApp, dan perangkat VR Meta Quest.</span></em></label>
+                                                        <label>Here is the <strong>Body Recap</strong> based on the input you provided in the previous step. Please review it carefully before submitting (this process cannot be repeated afterward). Note that the approval process may take <strong>up to 48 hours</strong> after submission. The entire approval process is managed by <strong>Meta</strong>.<em class="icon ni ni-help" id="icon-container3"><span class="tooltips3">Chat templates require approval from Meta to ensure content quality, prevent spam, and comply with WhatsApp Business policies—especially when sending messages outside the 24-hour session window. Meta Platforms, Inc. is a multinational technology company focused on social media, artificial intelligence, and metaverse development through platforms like Facebook, Instagram, WhatsApp, and Meta Quest VR devices.</span></em></label>
                                                     </div>
                                                     <div class="code-block" id="code-block-template-text">
                                                         <h6 class="overline-title title">Chat template body recap</h6>
@@ -179,7 +179,7 @@
                                                 </div>
                                                 <div id="media-inputs2" class="content-type-section" style="display: none;">
                                                     <div style="padding-bottom: 15px;">
-                                                        <label>Berikut adalah <strong>Body Recap</strong> dari input yang anda berikan di langkah sebelumnya. Silahkan diperiksa kembali sebelum melakukan submit (proses tidak dapat diulang kembali setelahnya). Sebagai catatan, proses approval sendiri membutuhkan waktu <strong>up to 48 jam</strong> sejak submit dilakukan. Seluruh proses approval dilakukan oleh pihak <strong>Meta</strong>.<em class="icon ni ni-help" id="icon-container3"><span class="tooltips3">Chat template memerlukan persetujuan dari Meta untuk memastikan konten berkualitas, mencegah spam, dan mematuhi kebijakan WhatsApp Business, terutama saat mengirim pesan di luar sesi 24 jam. Meta Platforms, Inc. adalah perusahaan teknologi multinasional yang berfokus pada media sosial, kecerdasan buatan, dan pengembangan metaverse melalui platform seperti Facebook, Instagram, WhatsApp, dan perangkat VR Meta Quest.</span></em></label>
+                                                        <label>Here is <strong>Body Recap</strong> Based on the input you provided in the previous step. Please review it carefully before submitting (the process cannot be repeated afterward). Note that the approval process may take some time <strong>up to 48 hours</strong> since the submission was made, the entire approval process is handled by <strong>Meta</strong>.<em class="icon ni ni-help" id="icon-container3"><span class="tooltips3">Chat templates require approval from Meta to ensure content quality, prevent spam, and comply with WhatsApp Business policies—especially when sending messages outside the 24-hour session window. Meta Platforms, Inc. is a multinational technology company focused on social media, artificial intelligence, and metaverse development through platforms like Facebook, Instagram, WhatsApp, and Meta Quest VR devices.</span></em></label>
                                                     </div>
                                                     <div class="code-block" id="code-block-template-media">
                                                         <h6 class="overline-title title">Chat template body recap</h6>
@@ -198,7 +198,7 @@
                 </div>
             </div>
             <div class="modal-footer bg-light">
-                <span class="sub-text">Bianco Costel Chatbot Management By Banda AI</span>
+                <span class="sub-text">Chatbot Management By Banda AI</span>
             </div>
         </div>
     </div>
