--- a/templates/chatbotapp/modalkirimtemplate.html
+++ b/templates/chatbotapp/modalkirimtemplate.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Kirim Template Chat Sekarang</h5>
+                <h5 class="modal-title">Send Chat Template Now</h5>
                 <a href="#" id="modalclosetemplatewizard" class="close" data-dismiss="modal" aria-label="Close" title="batalkan proses dan kembali">
                     <em class="icon ni ni-cross"></em>
                 </a>
@@ -14,30 +14,30 @@
                             <span class="preview-title overline-title">Approved Template</span>
                             <div class="form-control-wrap">
                                 <select class="custom-select" id="outlined-select-template">
-                                    <option value="">Pilih satu...</option>
+                                    <option value="">Choose one...</option>
                                 </select>
                             </div>
                         </div>
                         <div class="code-block" style="padding:5px;">
-                            <a href="#" id="download-template-btn" class="btn btn-dim btn-primary"><span>Unduh format data kontak dan variable  <em class="icon ni ni-download"></em></span></a>
+                            <a href="#" id="download-template-btn" class="btn btn-dim btn-primary"><span>Download the contact and variable data format  <em class="icon ni ni-download"></em></span></a>
                         </div>
                         <div class="code-block">
-                            <h6 class="overline-title title">Preview data anda</h6>
+                            <h6 class="overline-title title">Preview your data</h6>
                             <button class="btn btn-sm clipboard-init" title="Copy to clipboard" data-clipboard-target="#code-blok-template" data-clip-success="Copied" data-clip-text="Copy"><span class="clipboard-text">Copy</span></button>
                             <pre class="prettyprint lang-html" style="line-height:17px; max-height:190px;" id="code-blok-template">
 
                             </pre>
                         </div>
                         <div class="code-block" style="padding:5px;">
-                            <a href="#" id="upload-template-btn" class="btn btn-dim btn-primary"><span>Unggah data kontak dan variable disini  <em class="icon ni ni-upload"></em></span></a>
+                            <a href="#" id="upload-template-btn" class="btn btn-dim btn-primary"><span>Upload contact and variable data here  <em class="icon ni ni-upload"></em></span></a>
                             <input type="file" id="file-input-upload" style="display: none;" accept=".xlsx" />
                         </div>
                         <div class="alert alert-icon alert-primary" role="alert" style="margin-bottom:1rem;">
                             <em class="icon ni ni-alert-circle"></em> 
-                            <strong>Periksa kembali data</strong> hasil unggahan anda sebelum dikirim secara blast. 
+                            <strong>Review your uploaded data</strong> carefully before sending it as a blast.
                         </div>
                         <div style="display: flex; justify-content: center;">
-                            <a href="#" id="kirim-template-blast-btn" class="btn btn-dim btn-outline-success"><span>Kirim Blast Template Sekarang <em class="icon ni ni-send"></em></span></a>
+                            <a href="#" id="kirim-template-blast-btn" class="btn btn-dim btn-outline-success"><span>Send Template Blast Now <em class="icon ni ni-send"></em></span></a>
                         </div>
                     </div>
                     <div class="col">
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="modal-footer bg-light">
-                <span class="sub-text">Bianco Costel Chatbot Management By Banda AI</span>
+                <span class="sub-text">Chatbot Management By Banda AI</span>
             </div>
         </div>
     </div>
