--- a/templates/chatbotapp/whatsappbottemplate.html
+++ b/templates/chatbotapp/whatsappbottemplate.html
@@ -1,4 +1,4 @@
-{% extends "master-templates-bianco/base.html" %}
+{% extends "master-templates/base.html" %}
 {% load static %}
 
 {% block content %}
@@ -11,21 +11,21 @@
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="card card-bordered">
-                                        <img src="{% static 'images/card-temp-chatbot1-bianco.jpg' %}" class="card-img-top" title="Designed by Freepik">
+                                        <img src="{% static 'images/card-temp-chatbot1.jpg' %}" class="card-img-top" title="Designed by Freepik">
                                         <div class="card-inner">
-                                            <h5 class="card-title">Kreasikan Template Chat Sesuai Gayamu</h5>
-                                            <p class="card-text">Buat pesan chat otomatis yang kece buat bisnis kamu? Bikin templatenya disini, kirim ke Meta, dan pantau progresnya, semua dalam satu tempat. Gampang, cepat, gak pake ribet!</p>
-                                            <a href="" class="btn btn-primary" data-toggle="modal" data-target="#modalLarge7">Coba Buat Template</a>
+                                            <h5 class="card-title">Create Your Chat Template in Your Own Style</h5>
+                                            <p class="card-text">Create awesome automated chat messages for your business! Build the template here, send it to Meta, and track the progress—all in one place. Easy, fast, and hassle-free!</p>
+                                            <a href="" class="btn btn-primary" data-toggle="modal" data-target="#modalLarge7">Try Creating a Template</a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="card card-bordered">
-                                        <img src="{% static 'images/card-temp-chatbot2-bianco.jpg' %}" class="card-img-top" title="Designed by Freepik">
+                                        <img src="{% static 'images/card-temp-chatbot2.jpg' %}" class="card-img-top" title="Designed by Freepik">
                                         <div class="card-inner">
-                                            <h5 class="card-title">Template Approved? Langsung Kirim Aja!</h5>
-                                            <p class="card-text">Template kamu udah approved! Saatnya kirim info keren dan promo terbaru atau update bisnis dengan lebih cepat dan tepat ke audiens kamu. Gak perlu ribet—langsung dari satu tempat.</p>
-                                            <a href="" class="btn btn-primary" data-toggle="modal" data-target="#modalLarge9">Yuk kirim sekarang</a>
+                                            <h5 class="card-title">Template Approved? Just Send It Right Away!</h5>
+                                            <p class="card-text">Your template is approved! Now it's time to send exciting updates, promos, or business news quickly and accurately to your audience. No hassle—do it all from one place.</p>
+                                            <a href="" class="btn btn-primary" data-toggle="modal" data-target="#modalLarge9">Let’s send it now!</a>
                                         </div>
                                     </div>
                                 </div>
@@ -47,7 +47,7 @@
                     <div class="modal-body">
                         <div class="row gy-4">
                             <div class="col-sm-6">
-                                <a href="#" class="btn btn-wider btn-info" id="btnnewinstrcp"><span>Tambah/Ubah Company Profile</span><em class="icon ni ni-plus-circle"></em></a>
+                                <a href="#" class="btn btn-wider btn-info" id="btnnewinstrcp"><span>Add/Edit Company Profile</span><em class="icon ni ni-plus-circle"></em></a>
                             </div>
                             <div class="col-sm-6">
                                 <span class="preview-title overline-title" style="visibility:hidden">Save or Edit</span>
@@ -59,7 +59,7 @@
                         <div class="preview-block" id="instruksifrm">
                             <div class="form-group">                           
                                 <div class="form-control-wrap">
-                                    <textarea class="form-control no-resize" placeholder="Silakan input informasi company profile bisnis anda sebagai instruksi AI disini..." id="instruksicp">{{showprefix}}</textarea>
+                                    <textarea class="form-control no-resize" placeholder="Please enter your business company profile information as AI instruction here..." id="instruksicp">{{showprefix}}</textarea>
                                 </div>
                             </div>
                             <div class="row gy-4">
@@ -74,12 +74,12 @@
                                 <div class="col-sm-6">
                                     <div class="row gy-4">
                                         <div class="col-sm-6">
-                                            <span class="preview-title overline-title">simpan data?</span>
-                                            <button type="button" class="btn btn-primary btn-block" id="btnsaveinstrcp"><span>Simpan</span><em class="icon ni ni-save"></em></button>
+                                            <span class="preview-title overline-title">save data?</span>
+                                            <button type="button" class="btn btn-primary btn-block" id="btnsaveinstrcp"><span>Save</span><em class="icon ni ni-save"></em></button>
                                         </div>
                                         <div class="col-sm-6">
-                                            <span class="preview-title overline-title" style="visibility:hidden">batalkan data?</span>
-                                            <button type="button" class="btn btn-danger btn-block" id="btndiscardinstrcp"><span>Batalkan</span><em class="icon ni ni-cross-c"></em></button>
+                                            <span class="preview-title overline-title" style="visibility:hidden">cancel data?</span>
+                                            <button type="button" class="btn btn-danger btn-block" id="btndiscardinstrcp"><span>Cancel</span><em class="icon ni ni-cross-c"></em></button>
                                         </div>
                                     </div>
                                 </div>
@@ -89,7 +89,7 @@
                         <br />
                         <div class="row gy-4">
                             <div class="col-sm-6">
-                                <a href="#" class="btn btn-wider btn-info" id="btnnewinstrsx"><span>Tambah/Ubah Instruksi Suffix</span><em class="icon ni ni-plus-circle"></em></a>
+                                <a href="#" class="btn btn-wider btn-info" id="btnnewinstrsx"><span>Add/Edit Instruction Suffix</span><em class="icon ni ni-plus-circle"></em></a>
                             </div>
                             <div class="col-sm-6">
                                 <span class="preview-title overline-title" style="visibility:hidden">Save or Edit</span>
@@ -101,7 +101,7 @@
                         <div class="preview-block" id="instruksisxfrm">
                             <div class="form-group">                           
                                 <div class="form-control-wrap">
-                                    <textarea class="form-control no-resize" placeholder="Silakan input kalimat suffix sebagai tambahan instruksi AI disini..." id="instruksisx">{{showsuffix}}</textarea>
+                                    <textarea class="form-control no-resize" placeholder="Please enter a suffix sentence as additional AI instruction here..." id="instruksisx">{{showsuffix}}</textarea>
                                 </div>
                             </div>
                             <div class="row gy-4">
@@ -116,12 +116,12 @@
                                 <div class="col-sm-6">
                                     <div class="row gy-4">
                                         <div class="col-sm-6">
-                                            <span class="preview-title overline-title">simpan data?</span>
-                                            <button type="button" class="btn btn-primary btn-block" id="btnsaveinstrsx"><span>Simpan</span><em class="icon ni ni-save"></em></button>
+                                            <span class="preview-title overline-title">save data?</span>
+                                            <button type="button" class="btn btn-primary btn-block" id="btnsaveinstrsx"><span>Save</span><em class="icon ni ni-save"></em></button>
                                         </div>
                                         <div class="col-sm-6">
-                                            <span class="preview-title overline-title" style="visibility:hidden">batalkan data?</span>
-                                            <button type="button" class="btn btn-danger btn-block" id="btndiscardinstrsx"><span>Batalkan</span><em class="icon ni ni-cross-c"></em></button>
+                                            <span class="preview-title overline-title" style="visibility:hidden">cancel data?</span>
+                                            <button type="button" class="btn btn-danger btn-block" id="btndiscardinstrsx"><span>Cancel</span><em class="icon ni ni-cross-c"></em></button>
                                         </div>
                                     </div>
                                 </div>
@@ -129,7 +129,7 @@
                         </div>
                     </div>
                     <div class="modal-footer bg-light">
-                        <span class="sub-text">Bianco Costel Chatbot Management By Banda AI.</span>
+                        <span class="sub-text">Chatbot Management By Banda AI.</span>
                     </div>
                 </div>
             </div>
