--- a/templates/master-templates/base.html
+++ b/templates/master-templates/base.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="A powerful and conceptual apps base dashboard template that especially build for developers and programmers.">
     <link rel="shortcut icon" href="{% static 'images/favicon-bianco.png' %}">
-    <title>Bianco Costel Chatbot Management</title>
+    <title>Chatbot Management</title>
     <link rel="stylesheet" href="{% static 'assets/css/dashlite.css' %}">
     <link id="skin-default" rel="{% static 'assets/css/theme.css' %}">
     <link rel="stylesheet" href="https://cdn.datatables.net/2.1.8/css/dataTables.dataTables.css">
@@ -155,15 +155,15 @@
     <div class="nk-app-root">
         <div class="nk-main ">
             {% block sidebar %}
-                {% include 'master-templates-bianco/sidebar.html' %}
+                {% include 'master-templates/sidebar.html' %}
             {% endblock sidebar %}
             <div class="nk-wrap ">
                 {% block header %}
-                    {% include 'master-templates-bianco/main-header.html' %}
+                    {% include 'master-templates/main-header.html' %}
                 {% endblock header %}
                 {% block content %}{% endblock content %}
                 {% block footer %}
-                    {% include 'master-templates-bianco/main-footer.html' %}
+                    {% include 'master-templates/main-footer.html' %}
                 {% endblock footer %}
             </div>
         </div>
