--- a/templates/master-templates/main-footer.html
+++ b/templates/master-templates/main-footer.html
@@ -2,7 +2,7 @@
 <div class="nk-footer">
     <div class="container-fluid">
         <div class="nk-footer-wrap">
-            <div class="nk-footer-copyright"> &copy; <span id="getyear"></span> Bianco Costel Chatbot Management by <a href="https://baeta.digital/" target="_blank">Banda AI</a>
+            <div class="nk-footer-copyright"> &copy; <span id="getyear"></span> Chatbot Management by <a href="https://baeta.digital/" target="_blank">Banda AI</a>
             </div>
             <div class="nk-footer-links">
                 <ul class="nav nav-sm">
